tests/20-throw.out
Error: "throwing an error string"
#(tests/20-throw.p:5)           throw "throwing an error string"
                    |...........^
#(tests/20-throw.p:3)     def rec(num) {
                    |.....^
#(tests/20-throw.p:7)         return rec(num - 1)
                    |................^
#(tests/20-throw.p:3)     def rec(num) {
                    |.....^
#(tests/20-throw.p:7)         return rec(num - 1)
                    |................^
#(tests/20-throw.p:3)     def rec(num) {
                    |.....^
#(tests/20-throw.p:7)         return rec(num - 1)
                    |................^
#(tests/20-throw.p:3)     def rec(num) {
                    |.....^
#(tests/20-throw.p:7)         return rec(num - 1)
                    |................^
#(tests/20-throw.p:3)     def rec(num) {
                    |.....^
#(tests/20-throw.p:7)         return rec(num - 1)
                    |................^
#(tests/20-throw.p:3)     def rec(num) {
                    |.....^
#(tests/20-throw.p:10)     rec(5)
                     |.....^
